--- a/webserver/opentrain/gtfs/templates/gtfs/search.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search.html
@@ -1,20 +1,20 @@
 {% include "common/page_top.html" %}
 <div class="container">
-	<div class="starter-template">
-		<h1>Search</h1>
-		<form>
-			<label>From <select>
-
-				</select> </label>
-			<label>To <select>
-
-				</select> </label>
-			<input type="submit" value="Go">
-		</form>
-	</div>
+	<h2>Search</h2>
+	<form class="form-inline" role="form">
+		<div class="form-group">
+			<label for="fromStation">From:&nbsp;</label>
+			{% include "gtfs/select_stations.html" %}
+		</div>
+		<div class="form-group">
+			<label for="toStation">To:&nbsp;</label>
+			{% include "gtfs/select_stations.html" %}
+		</div>
+		<button type="submit" class="btn btn-success btn-sm">
+			<span class="glyphicon glyphicon-search"></span>
+		</button>
+	</form>
 </div>
 
 {% include "common/page_bottom.html" %}
-
-
 
