--- a/webserver/opentrain/gtfs/templates/gtfs/select_stations.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/select_stations.html
@@ -1,4 +1,4 @@
-<select>
+<select name="{{name}}" id="{{name}}">
 	{% for station in stations %}
 		<option>{{ station.stop_name }}</option>
 	{% endfor %}
