--- a/webserver/opentrain/templates/common/page_top.html
+++ b/webserver/opentrain/templates/common/page_top.html
@@ -27,7 +27,8 @@
 	</head>
 
 	<body>
-
+		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    	<script src="/static/bs3/js/bootstrap.min.js"></script>
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
