--- a/webserver/opentrain/gtfs/templates/gtfs/search_between.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_between.html
@@ -13,6 +13,7 @@
 			<span class="glyphicon glyphicon-search"></span>
 		</button>
 	</form>
+	{% include "gtfs/search_results.html" %}
 </div>
 
 {% include "common/page_bottom.html" %}
