--- a/webserver/opentrain/gtfs/templates/gtfs/search_in.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_in.html
@@ -12,6 +12,7 @@
 			<span class="glyphicon glyphicon-search"></span>
 		</button>
 	</form>
+	{% include "gtfs/search_results.html" %}
 </div>
 
 {% include "common/page_bottom.html" %}
