trip details wip

--- a/webserver/opentrain/gtfs/templates/gtfs/search_results.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_results.html
@@ -15,6 +15,10 @@
 			</td>
 		</tr>
 		<tr>
+			<td>Trip Id</td>
+			<td>{{result.trip.trip_id}}</td>
+		</tr>
+		<tr>
 			<td>Direction</td>
 			<td>{{result.trip.direction_id | direction_to_string }}</td>
 		</tr>
