--- a/webserver/opentrain/common/static/common/style/open-train.css
+++ b/webserver/opentrain/common/static/common/style/open-train.css
@@ -1,3 +1,16 @@
 body {
   padding-top: 50px;
 }
+
+.results-table {
+	table-layout: fixed;
+}
+
+.results-table tr :first-child {
+	width : 30%;
+}
+
+.results-table tr :second-child {
+	width : 70%;
+}
+
