--- a/webserver/opentrain/gtfs/templates/gtfs/search_results.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_results.html
@@ -49,6 +49,10 @@
 			<td>Departs</td>
 			<td>{{result.departure_time | denorm_time }}</td>
 		</tr>
+		<tr>
+			<td>Show on Map</td>
+			<td><a target="_blank" href="/gtfs/maps/{{result.trip.trip_id}}/">Map</a></td>
+		</tr>
 	</table>
 </div>
 <br/>
