--- a/webserver/opentrain/gtfs/templates/gtfs/search_results.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/search_results.html
@@ -51,7 +51,7 @@
 		</tr>
 		<tr>
 			<td>Show on Map</td>
-			<td><a target="_blank" href="/gtfs/maps/{{result.trip.trip_id}}/">Map</a></td>
+			<td><a target="_blank" href="/gtfs/maps/{{result.trip.trip_id}}/?zoom_stop_id={{result.stop.stop_id}}">Map</a></td>
 		</tr>
 	</table>
 </div>
