--- a/webserver/opentrain/gtfs/templates/gtfs/trip_map.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/trip_map.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load staticfiles %}
 {% load ot_filters %}
 <html>
 	<head>
@@ -7,7 +8,8 @@
 	</head>
 	<body>
 		<h1>Map for {{trip.trip_id}}</h1>
-		<div style="width:100%; height:100%" id="tripMap"></div>
+		<h1>From {{trip.get_first_stop.stop_name}} To {{trip.get_last_stop.stop_name}}</h1>
+		<div style="width:70%; height:100%" id="tripMap"></div>
 		<script defer="defer" type="text/javascript">
 			var fromProjection = new OpenLayers.Projection("EPSG:4326");   // Transform from WGS 1984
         	var toProjection   = new OpenLayers.Projection("EPSG:900913"); // to Spherical Mercator Projection
