--- a/webserver/opentrain/gtfs/templates/gtfs/trip_map.html
+++ b/webserver/opentrain/gtfs/templates/gtfs/trip_map.html
@@ -1,43 +1,20 @@
 {% load staticfiles %}
-{% load staticfiles %}
 {% load ot_filters %}
+<!DOCTYPE  html>
 <html>
 	<head>
 		<title>Map for {{trip.trip_id}}</title>
+		<link rel="stylesheet" href="{% static 'common/style/ot_map.css' %}">
 		<script src="http://openlayers.org/api/OpenLayers.js"></script>
 		<script src="{% static 'common/js/ot_map_utils.js' %}"></script>
-	</head>
-	<body>
-		<h1>Map for {{trip.trip_id}}</h1>
-		<h1>From {{trip.get_first_stop.stop_name}} To {{trip.get_last_stop.stop_name}}</h1>
-		<div style="width:70%; height:100%" id="tripMap"></div>
-		<script defer="defer" type="text/javascript">
-        	var center       = getLonLat({{zoom_stop.stop_lon}},{{zoom_stop.stop_lat}}); 
-			var markers = new OpenLayers.Layer.Markers( "Markers" );
-			var otIcon = new OpenLayers.Icon("{% static 'common/img/open-train.png' %}",{w:26,h:26});
-			var popups = [];
-			//var otIcon = new OpenLayers.Icon("http://www.openlayers.org/dev/img/marker.png",{w:26,h:26});
-			{%for stop_time in trip.get_stop_times%}
-			{
-				var pos = getLonLat({{stop_time.stop.stop_lon}},{{stop_time.stop.stop_lat}});
-				var marker = new OpenLayers.Marker(pos,otIcon.clone());
-    			markers.addMarker(marker);
-    			var popup = new OpenLayers.Popup.FramedCloud("stop_id_{{stop_time.stop.stop_id}}", 
-      			  	pos.clone(), null,
-        			'Stop {{stop_time.stop.stop_name}}<br/>@ {{stop_time.arrival_time | denorm_time}}',null,true);
-    			popups.push(popup);
-  			
-    			
-    		}
-    		{% endfor %}
-    		var map = new OpenLayers.Map('tripMap');
-    		map.addLayer(new OpenLayers.Layer.OSM());
-			map.setCenter(center, 15 );
-    		popups.forEach(function(it) {
-    			map.addPopup(it);
-    		});
-    		map.setCenter(center, 15 );
-    		map.addLayer(markers);
+		<script>
+		{% include 'gtfs/trip_map.js' %}
 		</script>
-	</body>
+	</head>
+	<body onload="initMap()">
+		<h2>Map for {{trip.trip_id}}</h2>
+		<h2>From {{trip.get_first_stop.stop_name}} To {{trip.get_last_stop.stop_name}}
+			(Zoom on {{zoom_stop.stop_name}})</h2>
+		<div id="tripMap"></div>
+		</body>
 </html>
