--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -21,7 +21,7 @@
 
 	<body>
 		<!-- <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> -->
-		<script src="{% static 'common/js/jquery-1.10.2.min.js' %}"></script>
+		<script src="{% static 'common/js/ext/jquery-1.10.2.min.js' %}"></script>
 		<script src="{% static 'common/bs3/js/bootstrap.min.js' %}"></script>
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
