--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -17,6 +17,8 @@
 		<!-- Custom styles for this template -->
 		<link href="{% static 'common/style/open-train.css' %}" rel="stylesheet">
 		
+		{% block headend %}
+		{% endblock %}
 	</head>
 
 	<body>
