--- a/webserver/opentrain/analysis/templates/analysis/show_reports.html
+++ b/webserver/opentrain/analysis/templates/analysis/show_reports.html
@@ -21,13 +21,19 @@
         </button>
     </form>
     {% if device_id %}
-	<h3>Map for device id {{device_id}} from {{device_date}}</h3>
-	<h4># of reports with loc: {{reports|length}}</h4>
-	<h4># of reports without loc: {{no_loc_reports_count}}</h4>
+    <br/>
+    <div class="well">
+	<p>Map for device id <b>{{device_id}}</b> between <span id="start_time"></span> to <span id="end_time"></span> in <span id="device_date"></span></p>
+	<p># of reports with loc: {{reports|length}}</p>
+	<p># of reports without loc: {{no_loc_reports_count}}</p>
+	</div>
 	<div id="map" style="width: 600px; height: 400px"></div>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
 	<script src="{% static 'common/js/ot_map_utils.js' %}"></script>
 	<script>
+		$("#start_time").html(toHourMinSec(new Date("{{start_time.isoformat}}")));
+		$("#end_time").html(toHourMinSec(new Date("{{end_time.isoformat}}")));
+		$("#device_date").html(toDate(new Date("{{start_time.isoformat}}")));
 		{% include 'analysis/analysis_map.js' %}
 		$(function() {
 			initMap();
