--- a/webserver/opentrain/analysis/templates/analysis/show_reports.html
+++ b/webserver/opentrain/analysis/templates/analysis/show_reports.html
@@ -26,6 +26,7 @@
 	<p>Map for device id <b>{{device_id}}</b> between <span id="start_time"></span> to <span id="end_time"></span> in <span id="device_date"></span></p>
 	<p># of reports with loc: {{reports|length}}</p>
 	<p># of reports without loc: {{no_loc_reports_count}}</p>
+	<p># of station points: {{stop_points_count}}</p>
 	</div>
 	<div id="map"></div>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
