--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -25,6 +25,7 @@
 		<!-- <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> -->
 		<script src="{% static 'common/js/ext/jquery-1.10.2.min.js' %}"></script>
 		<script src="{% static 'common/bs3/js/bootstrap.min.js' %}"></script>
+		<script src="{% static 'common/js/ot_utils.js'%}"></script>
 		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
