--- a/webserver/opentrain/analysis/templates/analysis/show_reports.html
+++ b/webserver/opentrain/analysis/templates/analysis/show_reports.html
@@ -9,37 +9,71 @@
 {% endif %}
 {% endblock %}
 
-
 {% block content %}
+{{ form.media }}
 <div class="container">
-    <h2>Search Reports</h2>
-    <form method="post" role="form">
-        {{form}}
-        {% csrf_token %}
-        <button type="submit" class="btn btn-success btn-sm">
-            <span class="glyphicon glyphicon-search"></span>
-        </button>
-    </form>
-    {% if device_id %}
-    <br/>
-    <div class="well">
-	<p>Map for device id <b>{{device_id}}</b> between <span id="start_time"></span> to <span id="end_time"></span> in <span id="device_date"></span></p>
-	<p># of reports with loc: {{reports|length}}</p>
-	<p># of reports without loc: {{no_loc_reports_count}}</p>
-	<p># of station points: {{stop_points_count}}</p>
+	<div class="row">
+    	<h2>Search Reports</h2>
+    	<form class="form-inline" method="post" role="form">
+        	{% for field in form %}
+        		<div class="form-group">
+        			<label>{{ field.label_tag }}</label>
+    				{{ field }}
+    			</div>
+			{% endfor %}
+        	{% csrf_token %}
+        	<button type="submit" class="btn btn-success btn-sm">
+            	<span class="glyphicon glyphicon-search"></span>
+       		</button>
+   		 </form>
+   </div>
+   {% if device_id %}
+   <br/>
+   <div class="row">
+   		<div class="col-md-3">
+	   		<div class="well">
+		    	<!--<p>Time filter: from <span id="filter_start_time"></span> to <span id="filter_end_time"></span></p>--> 
+				<p>Map for device id <b>{{device_id}}</b></p>
+				<p>Between <span id="start_time"></span> to <span id="end_time"></span> in <span id="device_date"></span></p>
+				<p>Full Range is between <span id="global_start_time"></span> to <span id="global_end_time"></span>)</p>
+				<p># of reports with loc: {{reports|length}} ({{global_reports_count}})</p>
+				<p># of reports without loc: {{no_loc_reports_count}}</p>
+				<p># of station points: {{stop_points_count}}</p>
+			</div>
+		</div>
+		<div class="col-md-9">
+			<div id="map"></div>
+		</div>
 	</div>
-	<div id="map"></div>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
 	<script src="{% static 'common/js/ot_map_utils.js' %}"></script>
 	<script>
-		$("#start_time").html(toHourMinSec(new Date("{{start_time.isoformat}}")));
-		$("#end_time").html(toHourMinSec(new Date("{{end_time.isoformat}}")));
+		{% if start_time %}
+			$("#start_time").html(toHourMinSec(new Date("{{start_time.isoformat}}")));
+			$("#end_time").html(toHourMinSec(new Date("{{end_time.isoformat}}")));
+		{% else %}
+			$("#start_time").html('n/a');
+			$("#end_time").html('n/a');
+		{% endif %}
+		$("#global_start_time").html(toHourMinSec(new Date("{{global_start_time.isoformat}}")));
+		$("#global_end_time").html(toHourMinSec(new Date("{{global_end_time.isoformat}}")));
 		$("#device_date").html(toDate(new Date("{{start_time.isoformat}}")));
+		{% if filter_start_time %} 
+			//$("#filter_start_time").html(toLocalDt(new Date("{{filter_start_time.isoformat}}")));
+		{% else %}
+			//$("#filter_start_time").html('all');
+		{% endif %}
+		{% if filter_end_time %}
+			//$("#filter_end_time").html(toLocalDt(new Date("{{filter_end_time.isoformat}}")));
+		{% else %}
+			//$("#filter_end_time").html('all');
+		{% endif %}
+		{% if reports %}
 		{% include 'analysis/analysis_map.js' %}
 		$(function() {
 			initMap();
 		});
-		
+		{% endif %}
 	</script>
     {% endif %}
 </div>
