--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -35,7 +35,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Open Train</a>
+					<a class="navbar-brand" href="/">Open Train</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
