--- a/webserver/opentrain/common/templates/common/base.html
+++ b/webserver/opentrain/common/templates/common/base.html
@@ -22,7 +22,8 @@
 	</head>
 
 	<body>
-		<!-- <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> -->
+		{% block scriptstart %}
+		{% endblock %}
 		<script src="{% static 'common/js/ext/jquery-1.10.2.min.js' %}"></script>
 		<script src="{% static 'common/bs3/js/bootstrap.min.js' %}"></script>
 		<script src="{% static 'common/js/ot_utils.js'%}"></script>
