--- a/webserver/opentrain/analysis/templates/analysis/show_reports.html
+++ b/webserver/opentrain/analysis/templates/analysis/show_reports.html
@@ -2,12 +2,13 @@
 {% load staticfiles %}
 
 {% block headend %}
-<link rel="stylesheet" href="{% static 'common/style/ot_map.css' %}">
 <link rel="stylesheet" href="/static/common/js/ang_dt/css/datetimepicker.css"/>
+<link rel="stylesheet" href="{% static 'common/style/ang_map.css' %}"/>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css" />
 {% endblock %}
 
 {% block scriptstart %}
+<script src="/static/common/js/ext/jquery-1.10.2.min.js"></script>
 <script src="/static/common/js/ext/angular.min.js"></script>
 <script src="/static/common/js/ang/services/myutils.js"></script>
 <script src="/static/common/js/ang/services/myhttp.js"></script>
@@ -15,7 +16,7 @@
 <script src="/static/common/js/ang/filters/filters.js"></script>
 <script src="/static/common/js/ang/directives/directives.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
-<script src="/static/common/js/ang_lf/angular-leaflet-directive.js"></script> 
+<script src="/static/common/js/ang_lf/angular-leaflet-directive.js"></script>
 <script src="/static/common/js/ext/moment.min.js"></script>
 <script src="/static/common/js/ang_dt/js/datetimepicker.js"></script>
 <script src="/static/analysis/js/app/app.js"></script>
@@ -23,8 +24,9 @@
 
 {% block content %}
 {{ form.media }}
-<div class="container" ng-app="show_reports">
-	<div ng-controller="ShowReportsController" ng-include="'/static/analysis/tpls/show_reports_tpl.html'">	
+<div id="main-body">
+	<div class="container-fluid" ng-app="show_reports">
+		<div ng-controller="ShowReportsController" ng-include="'/static/analysis/tpls/show_reports_tpl.html'"></div>
 	</div>
 </div>
 
