--- a/webserver/opentrain/analysis/templates/analysis/show_device_reports.html
+++ b/webserver/opentrain/analysis/templates/analysis/show_device_reports.html
@@ -4,7 +4,7 @@
 {% block headend %}
 <link rel="stylesheet" href="/static/common/js/ang_dt/css/datetimepicker.css"/>
 <link rel="stylesheet" href="{% static 'common/style/ang_map.css' %}"/>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css" />
+<link rel="stylesheet" href="/static/common/leaflet/leaflet.css" />
 {% endblock %}
 
 {% block scriptstart %}
@@ -15,7 +15,7 @@
 <script src="/static/common/js/ang/services/myleaflet.js"></script>
 <script src="/static/common/js/ang/filters/filters.js"></script>
 <script src="/static/common/js/ang/directives/directives.js"></script>
-<script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+<script src="/static/common/leaflet/leaflet-src.js"></script>
 <script src="/static/common/js/ang_lf/angular-leaflet-directive.js"></script>
 <script src="/static/common/js/ext/moment.min.js"></script>
 <script src="/static/common/js/ang_dt/js/datetimepicker.js"></script>
